# find-me

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.planning/2026-07-08-face-search-web/: plan.md  todo.md
.planning/2026-07-13-streaming-zip-index-relocation/: plan.md  todo.md
.planning/2026-07-14-serialized-inference/: plan.md  todo.md
.planning/2026-07-14-streaming-download/: plan.md  spec.md  todo.md
.planning/2026-07-14-thumbnail-cache/: plan.md  spec.md  todo.md
docs/: systemd.md
src/: build_index.py  face.py  main.py  relink_index.py  search_engine.py  thumbnail_cache.py
src/static/: index.html
