[project]
name = "find-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "insightface>=1.0.1",
    "numpy>=2.4.6",
    "nvidia-cudnn-cu12==9.5.1.17",
    "onnxruntime-gpu[cuda,cudnn]>=1.26.0",
    "opencv-python>=5.0.0.93",
    "python-multipart>=0.0.32",
    "tqdm>=4.68.4",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]
